minor fix to nb

--- a/Notebooks/modeling.ipynb
+++ b/Notebooks/modeling.ipynb
@@ -734,7 +734,7 @@
    "id": "50e2041b",
    "metadata": {},
    "source": [
-    "Thats better, now lets try hyperparamter tuning and gradient boosting to improve our model even more. We will try different combinations of hyperparameters to evaluate which is best."
+    "Thats better, now lets try hyperparamter tuning to improve our model even more. We will try different combinations of hyperparameters to evaluate which is best."
    ]
   },
   {
