--- a/Notebooks/modeling.ipynb
+++ b/Notebooks/modeling.ipynb
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "6337c15b",
    "metadata": {},
    "outputs": [],
@@ -895,17 +895,20 @@
     "    preds_log = best_model.predict(X_test)\n",
     "    preds = np.expm1(preds_log) \n",
     "\n",
+    "    y_test_original = np.expm1(y_test)\n",
+    "\n",
     "    plt.figure(figsize=(6,6))\n",
-    "    plt.scatter(y_test, preds, alpha=0.6)\n",
-    "    plt.plot([0, max(y_test)],[0, max(y_test)],color='red', linestyle='--')\n",
+    "    plt.scatter(y_test_original, preds, alpha=0.6)\n",
+    "    plt.plot([0, max(y_test_original)],[0, max(y_test_original)], color='red', linestyle='--')\n",
     "    plt.xlabel(\"Actual DAYS_OUT_NEXT\")\n",
     "    plt.ylabel(\"Predicted DAYS_OUT_NEXT\")\n",
     "    plt.title(\"Predicted vs Actual\")\n",
     "    plt.show()\n",
     "\n",
-    "    residuals = y_test-preds\n",
+    "    residuals = y_test_original - preds\n",
+    "\n",
     "    plt.figure(figsize=(8,4))\n",
-    "    plt.scatter(y_test, residuals, alpha=0.6)\n",
+    "    plt.scatter(y_test_original, residuals, alpha=0.6)\n",
     "    plt.axhline(y=0, color='red', linestyle='--')\n",
     "    plt.xlabel(\"Actual DAYS_OUT_NEXT\")\n",
     "    plt.ylabel(\"Residuals\")\n",
